# rust-rest-api-starter

./: Cargo.toml  README.md  docker-compose.yml  user.http
sql/: init.sql
src/: main.rs
src/db/: db.rs  mod.rs
src/models/: users.rs
