[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"]}
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
sea-orm = "0.12.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.release]
lto = true
strip = true
opt-level = "z"
